# boilerplates

./: .editorconfig  .gitignore  README.md
apps/users/: admin.py  models.py
cities/: admin.py  apps.py  models.py
cities/fixtures/: tots_ens.csv
cities/migrations/: 0001_initial.py  0002_auto_20200909_1601.py
conf/: .env.example  settings.py  urls.py
django_base_structure/: .editorconfig  .gitignore  README.md  pyproject.toml  tox.ini
django_base_structure/.github/workflows/: main.yml
django_base_structure/apps/users/: models.py
django_base_structure/conf/: .env.example  settings.py
django_base_structure/docker/: Dockerfile  example.compose-dev.yml  example.compose-prod.yml
django_base_structure/docker-develop/: Dockerfile  docker-compose.yml
django_base_structure/docker-develop/nginx.conf/: site-develop.conf
django_base_structure/docker/nginx.conf/: site-develop.conf
django_base_structure/docker/settings/develop/: settings.env.example
django_base_structure/src/apps/base/: decorators.py  helpers.py  mailing_manager.py  models.py  storage_backends.py  views.py
django_base_structure/src/apps/base/migrations/: 0001_initial.py
django_base_structure/src/apps/users/: admin.py  models.py
django_base_structure/src/apps/users/migrations/: 0001_initial.py
django_base_structure/src/conf/: settings.py  urls.py
django_base_structure/src/templates/emails/: base.html  notification_template.html
docker-develop/: Dockerfile  docker-compose.yml
docker-develop/nginx.conf/: site-develop.conf
templates/: 503.html
(+1 files in other folders)
